fix(progress): brand alignement for progressbar

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -743,7 +743,7 @@ $alert-danger-border:         $brand-danger;
 
 // Progress bars
 
-$progress-bg:                 $gray-lighter;
+$progress-bg:                 $gray-light-o;
 $progress-bar-color:          #000;
 $progress-border-radius:      $border-radius;
 $progress-box-shadow:         none;
